--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -11,10 +11,13 @@
 
 <div class="home" *ngIf="route == ''">
   <p>
-    Welcome<br />to<br /><span class="hotel1">hotels</span
-    ><span class="hotel2">hotels</span><span class="hotel3">hotels</span>
-  </p>
-  <button type="button" class="btn" routerLink="/hotels">CHECK OUR HOTELS &#10140;</button>
+    Entrez 
+    <br/>
+      pour
+    <br/>
+    <p class="Ornithologie"> découvrir l'ornithologie
+    </p>
+  <button type="button" class="btn" routerLink="/hotels">Entrez 🦆</button>
 </div>
 
 <router-outlet></router-outlet>
