--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,24 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
 
 :root {
-    --theme-purple: #9A75F0;
-    --theme-purple-hover: #9A75F033;
-    --theme-purple-placeholder: #9A75F0BB;
-    --theme-blue: #6E9EEB;
-    --theme-blue-hover: #6E9EEB33;
-    --theme-blue-placeholder: #6E9EEBBB;
-    --theme-lightblue: #14F2E0;
-    --theme-lightblue-hover: #14F2E033;
-    --theme-lightblue-placeholder: #14F2E0BB;
-    --theme-background: #e2e2e2;
+  --theme-green: #0b6623;
+  --theme-green-hover: #08400b;
+  --theme-green-placeholder: #3F704D;
+  --theme-blue: #6e9eeb;
+  --theme-blue-hover: #6e9eeb33;
+  --theme-blue-placeholder: #6e9eebbb;
+  --theme-lightblue: #14f2e0;
+  --theme-lightblue-hover: #14f2e033;
+  --theme-lightblue-placeholder: #14f2e0bb;
+  --theme-background: #e2e2e2;
 }
 
-.btn-primary{
-    margin-top: 10px;
+.btn-primary {
+  margin-top: 10px;
 }
 
-html { background-color: #e2e2e2; }
+html {
+  background-color: #e2e2e2;
+}
