on vois les nom scientifique, les noms commun et les status

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,7 +4,9 @@
   >
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" routerLink="/especes">Especes</a>
+      <a class="nav-item nav-link active" routerLink="/especeoiseaux"
+        >Especeoiseaus</a
+      >
     </div>
   </div>
 </nav>
@@ -18,7 +20,9 @@
   </p>
 
   <p class="Ornithologie">découvrir l'ornithologie</p>
-  <button type="button" class="btn" routerLink="/especes">Entrez 🦆</button>
+  <button type="button" class="btn" routerLink="/especeoiseaux">
+    Entrez 🦆
+  </button>
 </div>
 
 <router-outlet></router-outlet>
