rendu le HTML et CSS plus beau

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,7 +5,7 @@
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" routerLink="/especeoiseaux"
-        >Especeoiseaus</a
+        >Répertoire des espèces d'oiseaux</a
       >
     </div>
   </div>
