--- a/client/src/app/especeoiseau/especeoiseau.component.html
+++ b/client/src/app/especeoiseau/especeoiseau.component.html
@@ -1,13 +1,11 @@
 <div id="especeoiseau">
-  <h1>Especeoiseaus</h1>
+  <h1>Répertoire des espèces d'oiseaux</h1>
 
   <div class="divider"></div>
 
   <table
     id="ht"
-    align="center"
-    border="1"
-    width="1000"
+    width="100%"
     class="table-striped table-hover"
   >
     <thead class="header">
