--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -16,7 +16,7 @@
   width: 100%;
   height: 100%;
   background-image: url("./canard.png");
-  background-size: cover;
+  background-size:contain;
   background-position: center;
   font-family: "Roboto", sans-serif;
   position: absolute;
