small ui changes

--- a/client/src/app/especeoiseau/especeoiseau.component.html
+++ b/client/src/app/especeoiseau/especeoiseau.component.html
@@ -11,7 +11,7 @@
     <thead class="header">
       <th class="contentCell">Nom Scientifique</th>
       <th class="contentCell">Nom Commun</th>
-      <th class="contentCell">Statutspeces de l'espèce</th>
+      <th class="contentCell">Statut</th>
       <th class="contentCell">Prédateur</th>
       <th class="actionCell"></th>
     </thead>
